--- a/src/App.css
+++ b/src/App.css
@@ -171,8 +171,9 @@ body {
   border: 2px solid #facc15;
   border-radius: 8px;
   overflow-x: auto;
-  width: 100%;
+  width: 86%;
   max-width: 100%;
+  
 }
 
 .calendar-row-horizontal {
@@ -200,12 +201,16 @@ body {
   background: #fffbe9;
   font-size: 1.05rem;
   box-sizing: border-box;
+  position: sticky;
+  left: 0;
+  z-index: 2;
 }
 
 .header-cell.time-cell {
   background: #facc15;
   color: #111827;
   font-weight: 700;
+  height: 50px;
 }
 
 .day-cell {
@@ -417,6 +422,9 @@ body {
     font-size: 0.8rem;
     padding: 0.2rem 0.1rem;
     height: 36px;
+    position: sticky;
+    left: 0;
+    z-index: 2;
   }
   .day-cell {
     min-width: 54px;
@@ -433,6 +441,9 @@ body {
     max-width: 100px;
     font-size: 0.98rem;
     padding: 0.7rem 0.5rem;
+    position: sticky;
+    left: 0;
+    z-index: 2;
   }
   .day-cell {
     min-width: 90px;
@@ -448,6 +459,9 @@ body {
     max-width: 80px;
     font-size: 0.93rem;
     padding: 0.5rem 0.3rem;
+    position: sticky;
+    left: 0;
+    z-index: 2;
   }
   .day-cell {
     min-width: 70px;
@@ -471,6 +485,9 @@ body {
     font-size: 0.8rem;
     padding: 0.2rem 0.1rem;
     height: 36px;
+    position: sticky;
+    left: 0;
+    z-index: 2;
   }
   .day-cell {
     min-width: 54px;
